# thing

./: .gitignore  .gitmodules  .rustfmt.toml  Cargo.toml  Makefile  README.md  build.rs  deps.py  hyprland.conf  init.ps1  mac_soft.sh  mint-soft.sh  setup.sh  soft.ps1  soft.py  space.sh
.shell/: .alacritty.toml  .gitignore  .hrc  .profile  .wezterm.lua  _alacritty.yml  alacritty.yml  config  config.nu  configuration.nix  helix.toml  hyprland.conf  init.sh  install_lin.sh  install_mac.sh  makefile  paths.sh  settings.json  shell.sh  ssh_config  starship.toml
.shell/.doom.d/: config.el  init.el  paths.el
.shell/_shorts/: order  publish  slink  tag
.shell/arch/: 0-partition.sh  10-additional-soft.sh  2-setup.sh  3-after-setup.sh  6-de.sh  7-hyprland.sh  restore.sh
.shell/boxes/: vagrant-ssh
.shell/helix/: config.toml
.shell/hyprland/: appearance.conf  hyprland.conf  keymap.conf  soft.conf
.shell/ios/: pclone  popush
.shell/nvim/: commands.vim  init.vim  plugins.vim  rust1.vim  rust_ide.vim
.shell/shorts/: addenv  addpath  addpath.py  addpypath  b  bi.py  caller.py  cb.py  clip.py  clone.py  collect  op  (+51 more)
boxes/: Vagrantfile
crates/st/: Cargo.toml
crates/st/src/: st.rs
helpers/: link.py
scripts/: guitar_pro.sh  mac_soft.sh  mint-soft.sh  setup.sh  space.sh  ssh.sh  sudo.sh  swap.sh
shell/: clone_projects.sh  config.nu  hosts  macos_setup.sh  shell.sh  ssh_config  starship.toml  wezterm.lua
src/: command.rs  dep.rs  git.rs  installer.rs  linux_installer.rs  mac_installer.rs  main.rs  misc.rs  nvim.rs  paths.rs  self_update.rs  windows_installer.rs
(+68 files in other folders)
