[workspace]

default-members = ["crates/st"]
members = ["crates/clone", "crates/push", "crates/st", "crates/command"]

resolver = "2"

[workspace.metadata.cargo-machete]
ignored = []

[workspace.dependencies]
anyhow = "1.0"
dirs = "5.0"
git2 = "0.18"
structopt = "0.3"
walkdir = "2.5"

command = { path = "crates/command" }
